--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
   </head>
   <body>
     <div class="header">
-    
+      <div class="logo">
+        <div class="logo head">Header Logo</div>
+        <div class="logo par1">This Website is Awesome</div>
+        <div class="logo par2">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+      </div>
+      <div class="header right">
+        <ul>
+          <li><a href="">header link one</a></li>
+          <li><a href="">header link two</a></li>
+          <li><a href="">header link three</a></li>
+        </ul>
+        <img src="" alt="">
+      </div>
     </div>
     <div class="info">
 
