--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div class="logo head">Header Logo</div>
         <div class="logo par1">This Website is Awesome</div>
         <div class="logo par2">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+        <button class="button">Sign Up</button>
       </div>
       <div class="header right">
         <ul>
