--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       </div>
       <div class="header right">
         <ul>
-          <li><a href="">header link one</a></li>
-          <li><a href="">header link two</a></li>
-          <li><a href="">header link three</a></li>
+          <li><a href="">Home</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">About</a></li>
         </ul>
-        <img src="" alt="">
+        <img src="./galaxy.jpg" alt="our galaxy">
       </div>
     </div>
     <div class="info">
