completed info section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,25 @@
       </div>
     </div>
     <div class="info">
-
+      <div class="title-info">Some text below</div>
+      <div class="info-div">
+        <div class="sub-info">
+          <div class="card"></div>
+          <div class="card-info">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="sub-info">
+          <div class="card"></div>
+          <div class="card-info">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="sub-info">
+          <div class="card"></div>
+          <div class="card-info">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="sub-info">
+          <div class="card"></div>
+          <div class="card-info">this is some subtext under an illustration or image</div>
+        </div>
+      </div>
     </div>
     <div class="quote">
 
