completed sign section
in this commit i have added 2 divs inside sign box and made them flex and changed their color

--- a/index.html
+++ b/index.html
@@ -48,7 +48,13 @@
       <div class="who-wrote">-Thor, God of Thunder</div>
     </div>
     <div class="sign">
-
+      <div class="sign-box">
+        <div class="sign-text">
+          <div class="sign-head">Call to action! Its time!</div>
+          <div class="sign-par">Sign up for our product by clicing that link over there!</div>
+        </div>
+        <button>Sign Up</button>
+      </div>
     </div>
     <div class="footer">
 
