--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
     </div>
     <div class="footer">
-
+      <div>Copyright ©️ The Odin Project 2021</div>
     </div>
   </body>
 </html>
